Refactor: dedupe pending-entries test setup and tidy the memory adapter